--- a/easy-pharmacy-theme/assets/css/travel-vietnam.css
+++ b/easy-pharmacy-theme/assets/css/travel-vietnam.css
@@ -9,7 +9,7 @@
   min-height: 90vh;
   display: flex;
   align-items: center;
-  padding: 140px 0 80px;
+  padding: 60px 0 80px;
   overflow: hidden;
   background-image: url('https://images.unsplash.com/photo-1528127269322-539801943592?w=1600&h=900&fit=crop');
   background-size: cover;
